Bug 124234. Active Accessibility: doDefaultAction not working on html buttons. r=jkeiser, sr=jst, a=asa